--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 		<div class="container">
 			<nav>
 				<div class="nav-left">
-					<a href="beranda.html"><img src="images/logo/logo-g3.png" alt="logo"></a>
+					<a href="index.html"><img src="images/logo/logo-g3.png" alt="logo"></a>
 					<div class="brand">
 						<h3>Depot Kayu</h3>
 						<h1>Warga Jaya</h1>
 					</div>
 				</div>
 				<div class="nav-right">
-					<a href="html/beranda.html" class="active">Beranda</a>
+					<a href="index.html" class="active">Beranda</a>
 					<a href="html/produk.html">Produk</a>
 					<a href="html/layanan.html">Layanan</a>
 					<a href="html/kontak.html">Kontak</a>
@@ -45,7 +45,7 @@
 
 	<!-- Mobile Navigasi -->
 	<div class="nav-mobile">
-		<a href="html/beranda.html" class="anchor active">Beranda</a>
+		<a href="index.html" class="anchor active">Beranda</a>
 		<a href="html/produk.html" class="anchor">Produk</a>
 		<a href="html/layanan.html" class="anchor">Layanan</a>
 		<a href="html/kontak.html" class="anchor">Kontak</a>
