--- a/html/layanan.html
+++ b/html/layanan.html
@@ -21,14 +21,14 @@
 		<div class="container">
 			<nav>
 				<div class="nav-left">
-					<a href="beranda.html"><img src="../images/logo/logo-g3.png" alt="logo"></a>
+					<a href="../"><img src="../images/logo/logo-g3.png" alt="logo"></a>
 					<div class="brand">
 						<h3>Depot Kayu</h3>
 						<h1>Warga Jaya</h1>
 					</div>
 				</div>
 				<div class="nav-right">
-					<a href="beranda.html">Beranda</a>
+					<a href="../">Beranda</a>
 					<a href="produk.html">Produk</a>
 					<a href="layanan.html" class="active">Layanan</a>
 					<a href="kontak.html">Kontak</a>
@@ -44,7 +44,7 @@
 
 	<!-- Mobile Navigasi -->
 	<div class="nav-mobile">
-		<a href="beranda.html" class="anchor">Beranda</a>
+		<a href="../" class="anchor">Beranda</a>
 		<a href="produk.html" class="anchor">Produk</a>
 		<a href="layanan.html" class="anchor active">Layanan</a>
 		<a href="kontak.html" class="anchor">Kontak</a>
