--- a/html/produk.html
+++ b/html/produk.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<nav>
 				<div class="nav-left">
-					<a href="../"><img src="../images/logo/logo-g3.png" alt="logo"></a>
+					<a href=".."><img src="../images/logo/logo-g3.png" alt="logo"></a>
 					<div class="brand">
 						<h3>Depot Kayu</h3>
 						<h1>Warga Jaya</h1>
