--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 		<div class="container">
 			<nav>
 				<div class="nav-left">
-					<a href="index.html"><img src="images/logo/logo-g3.png" alt="logo"></a>
+					<a href="."><img src="images/logo/logo-g3.png" alt="logo"></a>
 					<div class="brand">
 						<h3>Depot Kayu</h3>
 						<h1>Warga Jaya</h1>
 					</div>
 				</div>
 				<div class="nav-right">
-					<a href="index.html" class="active">Beranda</a>
+					<a href=".." class="active">Beranda</a>
 					<a href="html/produk.html">Produk</a>
 					<a href="html/layanan.html">Layanan</a>
 					<a href="html/kontak.html">Kontak</a>
