--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					</div>
 				</div>
 				<div class="nav-right">
-					<a href=".." class="active">Beranda</a>
+					<a href="." class="active">Beranda</a>
 					<a href="html/produk.html">Produk</a>
 					<a href="html/layanan.html">Layanan</a>
 					<a href="html/kontak.html">Kontak</a>
@@ -45,7 +45,7 @@
 
 	<!-- Mobile Navigasi -->
 	<div class="nav-mobile">
-		<a href="index.html" class="anchor active">Beranda</a>
+		<a href="." class="anchor active">Beranda</a>
 		<a href="html/produk.html" class="anchor">Produk</a>
 		<a href="html/layanan.html" class="anchor">Layanan</a>
 		<a href="html/kontak.html" class="anchor">Kontak</a>
