--- a/html/produk.html
+++ b/html/produk.html
@@ -331,7 +331,7 @@
 				        </tr>
 			      	</tbody>
 				</table>
-				<p id="harga"><b>*harga dapat berubah sesuai kesepakatan bersama</b></p>
+				<p id="harga"><b>*harga dapat berubah sewaktu-waktu sesuai kesepakatan bersama</b></p>
 			</div>
 		</section>
 	</div>
